# MMM

./: .gitignore  README.md  README_2026_reduced.md  build_torvik_2026_single.py  pyproject.toml  requirements.txt
config/: __init__.py  features_2026_reduced.py
data/processed/: build_torvik_2026_single.py  process_data.py
data/raw/: hoopR_download_data.py
scripts/: build_2026_dataset.py  build_features.py  build_features_v2.py  build_matchups.py  download_data.py  evaluate.py  evaluate_brackets.py  predict_bracket.py  predict_bracket_2026_reduced.py  repair_team_profiles.py  run_backtest_reduced.py  run_model_backtests.py  run_model_backtests_v2.py  simulate_bracket.py  train_baseline.py  train_predict_2026_reduced.py  train_xgb.py
src/madness_model/: __init__.py  backtest_models.py  backtest_runner.py  baseline_model.py  bracket.py  build_matchups.py  build_model_dataset.py  build_team_features.py  calibrate.py  clean_data.py  config.py  elo.py  evaluate.py  evaluate_models.py  feature_config.py  load_data.py  load_processed_data.py  model_utils.py  paths.py  predict_matchups.py  simulate_bracket.py  train_models.py  (+2 more)
tests/: conftest.py  test_2026_reduced_pipeline.py  test_bracket_aggregation.py  test_bracket_simulation.py  test_bracket_structure.py  test_build_features_v2.py  test_build_matchups.py  test_elo.py  test_evaluate_brackets_script.py  test_features.py  test_model_training_modules.py  test_modeling_pipeline.py  test_reduced_backtest_and_bracket_scripts.py  test_run_model_backtests_script.py  test_run_model_backtests_v2_script.py  test_simulation.py
(+3 files in other folders)
